# math-reasoning

./: .gitignore  PROJECT.md  pyproject.toml
configs/: local.yaml  single_gpu.yaml
learn/: 01_what_is_a_model.py  02_what_is_training.py  learn.ipynb  model.ipynb
scripts/: explore_data.ipynb  run_baseline.py  setup_vast.sh  test_pipeline.py
src/data/: load_gsm8k.py  load_metamath.py  load_rstar.py  normalize.py
src/eval/: extract_answer.py  metrics.py
