[project]
name = "math-reasoning-distill"
version = "0.1.0"
description = "Teacher-guided GRPO training for math reasoning"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "numpy",
]

[project.optional-dependencies]
train = [
    "trl",
    "peft",
    "accelerate",
    "unsloth",
    "wandb",
]
serve = [
    "vllm",
    "sglang",
]
orchestrate = [
    "ray",
]

[tool.setuptools.packages.find]
include = ["src*"]
